--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>НС</title>
+	<title>network</title>
 
 	<script src="brain.js/browser.min.js"></script>
 
