--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>НС</title>
 
-	<script src="brain.js/browser.min.js"></script>
+	<script src="brain.js/brain-browser.min.js"></script>
 
 	<style>
 		body {
